@@ -4,6 +4,7 @@ package com.yahoo.vespa.hosted.provision;
 import com.yahoo.config.provision.DockerImage;
 import com.yahoo.config.provision.Flavor;
 import com.yahoo.config.provision.NodeFlavors;
+import com.yahoo.config.provision.NodeResources;
 import com.yahoo.config.provision.NodeType;
 import com.yahoo.config.provision.Zone;
 import com.yahoo.config.provisioning.FlavorsConfig;
@@ -11,13 +12,14 @@ import com.yahoo.test.ManualClock;
 import com.yahoo.vespa.curator.mock.MockCurator;
 import com.yahoo.vespa.flags.InMemoryFlagSource;
 import com.yahoo.vespa.hosted.provision.node.Agent;
+import com.yahoo.vespa.hosted.provision.node.IP;
 import com.yahoo.vespa.hosted.provision.provisioning.EmptyProvisionServiceProvider;
 import com.yahoo.vespa.hosted.provision.provisioning.FlavorConfigBuilder;
 import com.yahoo.vespa.hosted.provision.testutils.MockNameResolver;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 /**
  * @author bratseth
@@ -35,7 +37,7 @@ public class NodeRepositoryTester {
         curator = new MockCurator();
         curator.setZooKeeperEnsembleConnectionSpec("server1:1234,server2:5678");
         nodeRepository = new NodeRepository(nodeFlavors,
-                                            new EmptyProvisionServiceProvider().getHostResourcesCalculator(),
+                                            new EmptyProvisionServiceProvider(),
                                             curator,
                                             clock,
                                             Zone.defaultZone(),
@@ -43,8 +45,7 @@ public class NodeRepositoryTester {
                                             DockerImage.fromString("docker-registry.domain.tld:8080/dist/vespa"),
                                             new InMemoryFlagSource(),
                                             true,
-                                            false,
-                                            0);
+                                            0, 1000);
     }
     
     public NodeRepository nodeRepository() { return nodeRepository; }
@@ -54,16 +55,22 @@ public class NodeRepositoryTester {
         return nodeRepository.getNodes(type, inState);
     }
     
-    public Node addNode(String id, String hostname, String flavor, NodeType type) {
-        Node node = nodeRepository.createNode(id, hostname, Optional.empty(), 
-                                              nodeFlavors.getFlavorOrThrow(flavor), type);
-        return nodeRepository.addNodes(Collections.singletonList(node), Agent.system).get(0);
+    public Node addHost(String id, String hostname, String flavor, NodeType type) {
+        return addNode(id, hostname, null, nodeFlavors.getFlavorOrThrow(flavor), type);
     }
 
     public Node addNode(String id, String hostname, String parentHostname, String flavor, NodeType type) {
-        Node node = nodeRepository.createNode(id, hostname, Optional.of(parentHostname),
-                                              nodeFlavors.getFlavorOrThrow(flavor), type);
-        return nodeRepository.addNodes(Collections.singletonList(node), Agent.system).get(0);
+        return addNode(id, hostname, parentHostname, nodeFlavors.getFlavorOrThrow(flavor), type);
+    }
+
+    public Node addNode(String id, String hostname, String parentHostname, NodeResources resources) {
+        return addNode(id, hostname, parentHostname, new Flavor(resources), NodeType.tenant);
+    }
+
+    private Node addNode(String id, String hostname, String parentHostname, Flavor flavor, NodeType type) {
+        IP.Config ipConfig = new IP.Config(nodeRepository.nameResolver().resolveAll(hostname), Set.of());
+        Node node = Node.create(id, ipConfig, hostname, flavor, type).parentHostname(parentHostname).build();
+        return nodeRepository.addNodes(List.of(node), Agent.system).get(0);
     }
 
     /**
